Adding updates from branch

--- a/HTML/First.html
+++ b/HTML/First.html
@@ -2,6 +2,11 @@
 <head>
 <title>
 A Simple HTML Document - firts edit to the file
+
+
+Git Diff Example
+
+BRanch exmaple
 </title>
 </head>
 <body>
