veyr bad update

--- a/HTML/First.html
+++ b/HTML/First.html
@@ -6,7 +6,8 @@ A Simple HTML Document - firts edit to the file
 
 Git Diff Example
 
-BRanch exmaple
+This is bound to cause truoble .. as I am changing
+this to add more for diff and merge example
 </title>
 </head>
 <body>
