--- a/HTML/First.html
+++ b/HTML/First.html
@@ -6,7 +6,7 @@ A Simple HTML Document - firts edit to the file
 
 Git Diff Example
 
-BRanch exmaple
+I hope this is not a prpblem
 </title>
 </head>
 <body>
